--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "openai": "^3.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
